kernel/open_source/build_tools/hm-dsl/hmdsl/sysif/SysifGrammarParser.py
# Generated from /usr1/hmos_for_chipset/src/increment/sourcecode/out/generic_generic_arm_64only/general_8425P_phone_standard/hongmeng/build/tmp/work/x86_64-linux/hm-dsl-native/git-r0/image/usr1/hmos_for_chipset/src/increment/sourcecode/out/generic_generic_arm_64only/general_8425P_phone_standard/hongmeng/build/tmp/work/x86_64-linux/hm-dsl-native/git-r0/recipe-sysroot-native/usr/bin/hm-dsl/hmdsl/sysif/SysifGrammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SysifGrammarParser ( Parser ):

    grammarFileName = "SysifGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'INCLUDE_C_HEADER'", "'('", "')'", "'USE_CALL_PREFIX'", 
                     "'USE_HANDLER_PREFIX'", "'USE_SERVER_NAME'", "'INCLUDE_SUBSYSTEM'", 
                     "'GEN_WEAK_HDLR'", "'GROUP'", "'RO_AFTER_INIT_POSTPONED'", 
                     "'DEFINE_MANAGER'", "','", "'ARCH'", "'DEFINE_LSYSCALL_METHOD'", 
                     "'DEFINE_LSYSCALL_METHOD_NONE'", "'DEFINE_LSYSCALL_METHOD_LONG'", 
                     "'DEFINE_LSYSCALL_METHOD_UINT'", "'DEFINE_METHOD'", 
                     "'DEFINE_SIMPLE_METHOD'", "'DEFINE_METHOD_ULONG'", 
                     "'DEFINE_SIMPLE_METHOD_ULONG'", "'DEFINE_METHOD_LONG'", 
                     "'DEFINE_SIMPLE_METHOD_LONG'", "'ARG'", "'ARG_NO'", 
                     "'RET'", "'RET_NO'", "'SLOWDATA'", "'SLOWDATA_NO'", 
                     "'NO_STK_CHECK'", "'NATIVE'", "'SELFCALL'", "<INVALID>", 
                     "<INVALID>", "'*'", "'/'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DECLARE_DATATYPE", "SYSIF_DECLARE_DATATYPE", 
                      "POINTER", "SLASH", "EXTEND", "CNAME", "LETTER", "INT", 
                      "COMMENT", "WS" ]

    RULE_start = 0
    RULE_item = 1
    RULE_c_item = 2
    RULE_server_info = 3
    RULE_path = 4
    RULE_group_num = 5
    RULE_info = 6
    RULE_manager = 7
    RULE_max_method_num = 8
    RULE_method = 9
    RULE_lsyscall_body = 10
    RULE_archi = 11
    RULE_lsyscall_type = 12
    RULE_method_type = 13
    RULE_method_body = 14
    RULE_params_def = 15
    RULE_ret_def = 16
    RULE_slowdata_def = 17
    RULE_no_stk_check = 18
    RULE_is_native = 19
    RULE_has_selfcall = 20
    RULE_parameter = 21
    RULE_type_name = 22
    RULE_param_name = 23
    RULE_manager_name = 24
    RULE_method_name = 25
    RULE_syscallnum = 26
    RULE_arch_name = 27

    ruleNames =  [ "start", "item", "c_item", "server_info", "path", "group_num", 
                   "info", "manager", "max_method_num", "method", "lsyscall_body", 
                   "archi", "lsyscall_type", "method_type", "method_body", 
                   "params_def", "ret_def", "slowdata_def", "no_stk_check", 
                   "is_native", "has_selfcall", "parameter", "type_name", 
                   "param_name", "manager_name", "method_name", "syscallnum", 
                   "arch_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    DECLARE_DATATYPE=33
    SYSIF_DECLARE_DATATYPE=34
    POINTER=35
    SLASH=36
    EXTEND=37
    CNAME=38
    LETTER=39
    INT=40
    COMMENT=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._item = None # ItemContext
            self.item_list = list() # of ItemContexts

        def EOF(self):
            return self.getToken(SysifGrammarParser.EOF, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysifGrammarParser.ItemContext)
            else:
                return self.getTypedRuleContext(SysifGrammarParser.ItemContext,i)


        def getRuleIndex(self):
            return SysifGrammarParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SysifGrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25769807858) != 0):
                self.state = 56
                localctx._item = self.item()
                localctx.item_list.append(localctx._item)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(SysifGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def server_info(self):
            return self.getTypedRuleContext(SysifGrammarParser.Server_infoContext,0)


        def manager(self):
            return self.getTypedRuleContext(SysifGrammarParser.ManagerContext,0)


        def c_item(self):
            return self.getTypedRuleContext(SysifGrammarParser.C_itemContext,0)


        def getRuleIndex(self):
            return SysifGrammarParser.RULE_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = SysifGrammarParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_item)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.server_info()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.manager()
                pass
            elif token in [1, 33, 34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.c_item()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class C_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SysifGrammarParser.RULE_c_item

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Sysif_convention_codeContext(C_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.C_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYSIF_DECLARE_DATATYPE(self):
            return self.getToken(SysifGrammarParser.SYSIF_DECLARE_DATATYPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSysif_convention_code" ):
                return visitor.visitSysif_convention_code(self)
            else:
                return visitor.visitChildren(self)


    class Declare_datatypeContext(C_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.C_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DECLARE_DATATYPE(self):
            return self.getToken(SysifGrammarParser.DECLARE_DATATYPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_datatype" ):
                return visitor.visitDeclare_datatype(self)
            else:
                return visitor.visitChildren(self)


    class Include_headerContext(C_itemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.C_itemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def path(self):
            return self.getTypedRuleContext(SysifGrammarParser.PathContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_header" ):
                return visitor.visitInclude_header(self)
            else:
                return visitor.visitChildren(self)



    def c_item(self):

        localctx = SysifGrammarParser.C_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_c_item)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = SysifGrammarParser.Include_headerContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(SysifGrammarParser.T__0)
                self.state = 70
                self.match(SysifGrammarParser.T__1)
                self.state = 71
                self.path()
                self.state = 72
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [33]:
                localctx = SysifGrammarParser.Declare_datatypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(SysifGrammarParser.DECLARE_DATATYPE)
                pass
            elif token in [34]:
                localctx = SysifGrammarParser.Sysif_convention_codeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.match(SysifGrammarParser.SYSIF_DECLARE_DATATYPE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Server_infoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SysifGrammarParser.RULE_server_info

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Server_nameContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def info(self):
            return self.getTypedRuleContext(SysifGrammarParser.InfoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServer_name" ):
                return visitor.visitServer_name(self)
            else:
                return visitor.visitChildren(self)


    class Gen_weak_hdlrContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGen_weak_hdlr" ):
                return visitor.visitGen_weak_hdlr(self)
            else:
                return visitor.visitChildren(self)


    class Call_prefixContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def info(self):
            return self.getTypedRuleContext(SysifGrammarParser.InfoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall_prefix" ):
                return visitor.visitCall_prefix(self)
            else:
                return visitor.visitChildren(self)


    class SubsystemContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def path(self):
            return self.getTypedRuleContext(SysifGrammarParser.PathContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubsystem" ):
                return visitor.visitSubsystem(self)
            else:
                return visitor.visitChildren(self)


    class Ro_after_init_postponedContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRo_after_init_postponed" ):
                return visitor.visitRo_after_init_postponed(self)
            else:
                return visitor.visitChildren(self)


    class Hdlr_prefixContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def info(self):
            return self.getTypedRuleContext(SysifGrammarParser.InfoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHdlr_prefix" ):
                return visitor.visitHdlr_prefix(self)
            else:
                return visitor.visitChildren(self)


    class GroupContext(Server_infoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.Server_infoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def group_num(self):
            return self.getTypedRuleContext(SysifGrammarParser.Group_numContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroup" ):
                return visitor.visitGroup(self)
            else:
                return visitor.visitChildren(self)



    def server_info(self):

        localctx = SysifGrammarParser.Server_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_server_info)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                localctx = SysifGrammarParser.Call_prefixContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(SysifGrammarParser.T__3)
                self.state = 79
                self.match(SysifGrammarParser.T__1)
                self.state = 80
                self.info()
                self.state = 81
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [5]:
                localctx = SysifGrammarParser.Hdlr_prefixContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(SysifGrammarParser.T__4)
                self.state = 84
                self.match(SysifGrammarParser.T__1)
                self.state = 85
                self.info()
                self.state = 86
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [6]:
                localctx = SysifGrammarParser.Server_nameContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(SysifGrammarParser.T__5)
                self.state = 89
                self.match(SysifGrammarParser.T__1)
                self.state = 90
                self.info()
                self.state = 91
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [7]:
                localctx = SysifGrammarParser.SubsystemContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(SysifGrammarParser.T__6)
                self.state = 94
                self.match(SysifGrammarParser.T__1)
                self.state = 95
                self.path()
                self.state = 96
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [8]:
                localctx = SysifGrammarParser.Gen_weak_hdlrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.match(SysifGrammarParser.T__7)
                pass
            elif token in [9]:
                localctx = SysifGrammarParser.GroupContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.match(SysifGrammarParser.T__8)
                self.state = 100
                self.match(SysifGrammarParser.T__1)
                self.state = 101
                self.group_num()
                self.state = 102
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [10]:
                localctx = SysifGrammarParser.Ro_after_init_postponedContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 104
                self.match(SysifGrammarParser.T__9)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CNAME(self, i:int=None):
            if i is None:
                return self.getTokens(SysifGrammarParser.CNAME)
            else:
                return self.getToken(SysifGrammarParser.CNAME, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(SysifGrammarParser.SLASH)
            else:
                return self.getToken(SysifGrammarParser.SLASH, i)

        def EXTEND(self, i:int=None):
            if i is None:
                return self.getTokens(SysifGrammarParser.EXTEND)
            else:
                return self.getToken(SysifGrammarParser.EXTEND, i)

        def getRuleIndex(self):
            return SysifGrammarParser.RULE_path

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath" ):
                return visitor.visitPath(self)
            else:
                return visitor.visitChildren(self)




    def path(self):

        localctx = SysifGrammarParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self.match(SysifGrammarParser.CNAME)
                    self.state = 108
                    self.match(SysifGrammarParser.SLASH) 
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 114
            self.match(SysifGrammarParser.CNAME)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 115
                self.match(SysifGrammarParser.EXTEND)
                self.state = 116
                self.match(SysifGrammarParser.CNAME)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Group_numContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SysifGrammarParser.INT, 0)

        def getRuleIndex(self):
            return SysifGrammarParser.RULE_group_num

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroup_num" ):
                return visitor.visitGroup_num(self)
            else:
                return visitor.visitChildren(self)




    def group_num(self):

        localctx = SysifGrammarParser.Group_numContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_group_num)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SysifGrammarParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InfoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CNAME(self):
            return self.getToken(SysifGrammarParser.CNAME, 0)

        def getRuleIndex(self):
            return SysifGrammarParser.RULE_info

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfo" ):
                return visitor.visitInfo(self)
            else:
                return visitor.visitChildren(self)




    def info(self):

        localctx = SysifGrammarParser.InfoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_info)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(SysifGrammarParser.CNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManagerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._method = None # MethodContext
            self.method_list = list() # of MethodContexts

        def manager_name(self):
            return self.getTypedRuleContext(SysifGrammarParser.Manager_nameContext,0)


        def max_method_num(self):
            return self.getTypedRuleContext(SysifGrammarParser.Max_method_numContext,0)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysifGrammarParser.MethodContext)
            else:
                return self.getTypedRuleContext(SysifGrammarParser.MethodContext,i)


        def getRuleIndex(self):
            return SysifGrammarParser.RULE_manager

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManager" ):
                return visitor.visitManager(self)
            else:
                return visitor.visitChildren(self)




    def manager(self):

        localctx = SysifGrammarParser.ManagerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_manager)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SysifGrammarParser.T__10)
            self.state = 127
            self.match(SysifGrammarParser.T__1)
            self.state = 128
            self.manager_name()
            self.state = 129
            self.match(SysifGrammarParser.T__11)
            self.state = 130
            self.max_method_num()
            self.state = 131
            self.match(SysifGrammarParser.T__11)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 132
                localctx._method = self.method()
                localctx.method_list.append(localctx._method)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16760832) != 0)):
                    break

            self.state = 137
            self.match(SysifGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Max_method_numContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SysifGrammarParser.INT, 0)

        def getRuleIndex(self):
            return SysifGrammarParser.RULE_max_method_num

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMax_method_num" ):
                return visitor.visitMax_method_num(self)
            else:
                return visitor.visitChildren(self)




    def max_method_num(self):

        localctx = SysifGrammarParser.Max_method_numContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_max_method_num)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(SysifGrammarParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SysifGrammarParser.RULE_method

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SyscallContext(MethodContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.MethodContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def method_type(self):
            return self.getTypedRuleContext(SysifGrammarParser.Method_typeContext,0)

        def method_body(self):
            return self.getTypedRuleContext(SysifGrammarParser.Method_bodyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyscall" ):
                return visitor.visitSyscall(self)
            else:
                return visitor.visitChildren(self)


    class LsyscallContext(MethodContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SysifGrammarParser.MethodContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def lsyscall_type(self):
            return self.getTypedRuleContext(SysifGrammarParser.Lsyscall_typeContext,0)

        def lsyscall_body(self):
            return self.getTypedRuleContext(SysifGrammarParser.Lsyscall_bodyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLsyscall" ):
                return visitor.visitLsyscall(self)
            else:
                return visitor.visitChildren(self)



    def method(self):

        localctx = SysifGrammarParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 19, 20, 21, 22, 23]:
                localctx = SysifGrammarParser.SyscallContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.method_type()
                self.state = 142
                self.match(SysifGrammarParser.T__1)
                self.state = 143
                self.method_body()
                self.state = 144
                self.match(SysifGrammarParser.T__2)
                pass
            elif token in [14, 15, 16, 17]:
                localctx = SysifGrammarParser.LsyscallContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.lsyscall_type()
                self.state = 147
                self.match(SysifGrammarParser.T__1)
                self.state = 148
                self.lsyscall_body()
                self.state = 149
                self.match(SysifGrammarParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lsyscall_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_name(self):
            return self.getTypedRuleContext(SysifGrammarParser.Method_nameContext,0)


        def syscallnum(self):
            return self.getTypedRuleContext(SysifGrammarParser.SyscallnumContext,0)


        def params_def(self):
            return self.getTypedRuleContext(SysifGrammarParser.Params_defContext,0)


        def is_native(self):
            return self.getTypedRuleContext(SysifGrammarParser.Is_nativeContext,0)

